Add manifest entry for Main-Class when building the jar file

--- a/WiSim-Prototyp/build.gradle
+++ b/WiSim-Prototyp/build.gradle
@@ -3,3 +3,10 @@ apply plugin: 'java'
 task wrapper(type: Wrapper) {
     gradleVersion = '2.6'
 }
+
+jar {
+    manifest {
+    	     attributes("Main-Class": "main.java.frontend.WiSimFrontend",
+	     		"Implementation-Version": "0.1")
+	     }
+}
